2007-06-27  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c, pwd.c: Only return failure if a documented errno is encountered.
	  This fixes UnixUserInfo.GetLocalUsers() and UnixGroupInfo.GetLocalGroups()
	  on systems missing the file /etc/default/nss (which generates ENOENT,
	  which isn't documented, so therefore it's not a "real" error).
	* mph.h: Add mph_return_if_val_in_list5().

2007-03-28  Wade Berrier  <miguel@novell.com>

	* supportw.c (SendMessageA/GetWindowLongA): Return values to fix some 
	warnings, even though these aren't called (Patch from suse rpms)

2007-01-23  Miguel de Icaza  <miguel@novell.com>

	* serial.c (poll_serial): Fix for #79073, based on the patch by
	Leszek Ciesielski, without introducing a GNU libc-ism.
	(write_serial): Handle EINTR here as well.

2006-11-30  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: _cnm_return_val_if_overflow() should be a no-op unless DEBUG is
	  defined.  "Fixes" false positives pending further investigation.

2006-11-18  Miguel de Icaza  <miguel@novell.com>

	* serial.c (poll_serial): Do not report an error for EINTR. 

2006-11-18  Jelle Hissink  <Jelle.Hissink@C-it.nl>

	* serial.c (poll_serial): Add timeout parameter to poll.

	Fixes #79722 and #79735

2006-11-17  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Flush (fix FromFilePermissions for SuppressFlags-marked values).

2006-11-15  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Flush (removes warnings due to _cnm_return_val_if_overflow()).

2006-11-14  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Flush (fixes FilePermissions conversion, allowing Syscall.stat() to
	  work as expected).

2006-11-13  Jonathan Pryor  <jonpryor@vt.edu>

	* mph.h: Add macro for XATTR_AUTO, so that XattrFlags mapping works (as
	  XATTR_AUTO is a value which frequently isn't definedy by any OS, yet it
	  has the value 0, a default value which is supported by most OS's).

2006-11-08  Jonathan Pryor  <jonpryor@vt.edu>
